change package name for Git Submit package  naming conventions

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Sedhossein/PersianRegex",
+    "name": "sedhossein/pregex",
     "description": "Recommended regex's For Persian/Farsi(fa) Language",
     "type": "library",
     "authors": [
